@@ -1,3 +1,7 @@
+lomoco (1.1)
+
+  * Added patches from Debian and ArchLinux
+
 lomoco (1.0)
 
   * Update udev rules an script for latest version
